添加：触屏即可移动的红色小球（该action还未绑定按钮事件）

--- a/MyApplication1/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_gravity="center_vertical"
     tools:context="com.example.administrator.myapplication1.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello Wddddorld!" />
+        android:text="主界面" />
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="70px"
-        android:text="来啊"/>
+        android:id="@+id/bt_ball"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="移动的小球"/>
+    <Button
+        android:id="@+id/bt_ball2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="移动的小球"/>
 </LinearLayout>
