添加：表格布局式的按钮；霓虹灯组件

--- a/MyApplication1/app/src/main/res/layout/activity_drawball.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_drawball.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--(#111)此布局是点击屏幕有红色小球出现-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/root">
+    android:orientation="vertical">
 
 </LinearLayout>
