--- a/MyApplication1/app/src/main/res/layout/activity_part2.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_part2.xml
@@ -74,11 +74,11 @@
             <Button android:id="@+id/btn2_20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="空"/>
+                android:text="弹框选择"/>
             <Button android:id="@+id/btn2_21"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="空"/>
+                android:text="自动播放图片"/>
         </TableRow>
     </TableLayout>
     <!--
