添加：进度条（该版本API不支持目前方法查询后更换即可） 注册：进度条 记录

--- a/MyApplication1/app/src/main/res/layout/activity_alterselect.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_alterselect.xml
@@ -6,11 +6,13 @@
     <!--此处entries属性是直接引用已定义的数组-->
     <Spinner android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/books"
-        android:prompt="@string/tip"/>
+        android:entries="@array/books"/>
+        <!--android:prompt="@string/tip"-->
+
     <!--此处未引用数组，需要在activity内部定义ArrayAdapter提供数组-->
     <Spinner android:layout_height="wrap_content"
         android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:prompt="@string/tip"/>
+        android:layout_width="match_parent"/>
+        <!--android:prompt="@string/tip"-->
+        />
 </LinearLayout>
