--- a/MyApplication1/app/src/main/res/layout/activity_part2.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_part2.xml
@@ -88,11 +88,11 @@
             <Button android:id="@+id/btn2_24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="标题进度条"/>
+                android:text="Toast"/>
            <Button android:id="@+id/btn2_25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:text="空"/>
+               android:text="Tab页"/>
         </TableRow>
         <TableRow>
             <Button android:id="@+id/btn2_26"
