添加：公共activity；发送通知 注册：公共activity；发送通知activity；LED整栋权限注册 绑定：按钮 记录

--- a/MyApplication1/app/src/main/res/layout/activity_part2.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_part2.xml
@@ -98,7 +98,7 @@
             <Button android:id="@+id/btn2_26"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="空"/>
+                android:text="发送通知"/>
             <Button android:id="@+id/btn2_27"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
