添加：计算质数 注册：添加质数 绑定：添加质数

--- a/MyApplication1/app/src/main/res/layout/activity_part3.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_part3.xml
@@ -30,7 +30,7 @@
             <Button android:id="@+id/btn3_13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="空"/>
+                android:text="计算质数"/>
             <Button android:id="@+id/btn3_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
