添加：变化的背景色 注册变化背景色 绑定

--- a/MyApplication1/app/src/main/res/layout/part6.xml
+++ b/MyApplication1/app/src/main/res/layout/part6.xml
@@ -9,12 +9,12 @@
     <Button android:id="@+id/btn6_15"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="展开的图片"/>
+        android:text="徐徐展开的图片"/>
     <TableRow>
         <Button android:id="@+id/btn6_16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="空"/>
+            android:text="变化的背景色"/>
         <Button android:id="@+id/btn6_17"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
