添加：绘制画板 注册：画板 绑定 记录

--- a/MyApplication1/app/src/main/res/layout/part6.xml
+++ b/MyApplication1/app/src/main/res/layout/part6.xml
@@ -18,7 +18,7 @@
         <Button android:id="@+id/btn6_17"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="空"/>
+            android:text=""/>
         <Button android:id="@+id/btn6_18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
