添加：扭曲图片 注册：扭曲图片 绑定 记录

--- a/MyApplication1/app/src/main/res/layout/activity_part7.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_part7.xml
@@ -19,7 +19,7 @@
             <Button android:id="@+id/btn7_17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""/>
+                android:text="扭曲图片"/>
             <Button android:id="@+id/btn7_18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
