添加：蝴蝶飞舞 注册： 绑定 记录

--- a/MyApplication1/app/src/main/res/layout/activity_part7.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_part7.xml
@@ -23,7 +23,7 @@
             <Button android:id="@+id/btn7_18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="空"/>
+                android:text="蝴蝶飞舞"/>
         </TableRow>
     </TableLayout>
 </LinearLayout>
