添加：手势缩放图片 注册 绑定 记录

--- a/MyApplication1/app/src/main/res/layout/activity_part8.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_part8.xml
@@ -15,7 +15,7 @@
             <Button android:id="@+id/btn8_16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""/>
+                android:text="手势缩放"/>
             <Button android:id="@+id/btn8_17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
