--- a/MyApplication1/app/src/main/res/layout/activity_part8.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_part8.xml
@@ -23,7 +23,7 @@
             <Button android:id="@+id/btn8_18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""/>
+                android:text="添加手势"/>
         </TableRow>
     </TableLayout>
 </LinearLayout>
