--- a/MyApplication1/app/src/main/res/layout/activity_part9.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_part9.xml
@@ -14,7 +14,7 @@
             <Button android:id="@+id/btn9_16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""/>
+                android:text="查看图片"/>
             <Button android:id="@+id/btn9_17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
