--- a/MyApplication1/app/src/main/res/layout/activity_part13.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_part13.xml
@@ -14,7 +14,7 @@
             <Button android:id="@+id/btn13_16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""/>
+                android:text="迷你浏览器"/>
             <Button android:id="@+id/btn13_17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
